# h5rio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: client.yml  test.yml
data/: table_and_array.h5
examples/: array_round_trip.rs  table_round_trip.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: h5type.rs
src/: array_writer.rs  lib.rs  reader.rs  table_writer.rs  utils.rs
