[package]
name = "h5rio"
version = "0.2.0"
edition = "2024"
description = "A simple HDF5 IO library"
license = "GPL-3.0"
repository= "https://github.com/gonzaponte/h5rio"
documentation = "https://docs.rs/h5rio"
readme = "README.md"
keywords = ["hdf5", "simple", "io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["macros"]

[dependencies]
hdf5_metno = { package = "hdf5-metno", version = "0.12.3" , features=["blosc-zlib"]}
ndarray = "0.17.2"

h5rio_macros = { path = "macros", version = "0.2.0" }


[dev-dependencies]
float_eq = "1.0.1"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
rstest = "0.26.1"
