[package]
name = "h5rio_macros"
version = "0.1.0"
edition = "2024"
description = "Useful macros for the h5rio crate"
license = "GPL-3.0"
repository= "https://github.com/gonzaponte/h5rio"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2="1"

[dev-dependencies]
hdf5_metno = { package = "hdf5-metno", version = "0.12.3"}
